FIX: items were not centered on the game over box

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -73,6 +73,7 @@ footer a:hover {
     gap: 20px;
     padding: 45px;
     position: fixed;
+    display: flex;
     flex-direction: column;
     align-items: center;
     button {
